# th-jailbreak

./: cabal.project
.github/workflows/: workflows.yml
th-jailbreak/: LICENSE  th-jailbreak.cabal
th-jailbreak/src/Language/Haskell/TH/: Jailbreak.hs
th-jailbreak/test/: th-jailbreak-test.hs
