cabal-version:      >=1.10
name:               th-jailbreak
version:            0.1.0.0
synopsis:           Jailbreak the Template Haskell API and achieve wonders.
description:
  Please see <https://github.com/tweag/th-jailbreak> for details.

homepage:           https://github.com/tweag/th-jailbreak#readme
bug-reports:        https://github.com/tweag/th-jailbreak/issues
license:            BSD-3
license-file:       LICENSE
author:             Cheng Shao
maintainer:         Cheng Shao <cheng.shao@tweag.io>
copyright:          (c) 2021 Tweag I/O
build-type:         Simple
extra-source-files: LICENSE

source-repository head
  type:     git
  location: https://github.com/tweag/th-jailbreak

library
  exposed-modules:  Language.Haskell.TH.Jailbreak
  hs-source-dirs:   src
  ghc-options:      -Wall
  build-depends:
      base              >=4.12 && <5
    , ghc
    , template-haskell

  default-language: Haskell2010

test-suite th-jailbreak-test
  type: exitcode-stdio-1.0
  main-is:          th-jailbreak-test.hs
  hs-source-dirs:   test
  ghc-options:      -Wall -threaded -rtsopts
  build-depends:
      base          >=4.12 && <5
    , bytestring
    , cassava
    , tasty
    , tasty-hunit
    , th-jailbreak

  default-language: Haskell2010
